<resources>
    <string name="app_name">ChallengeAPP</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Speichern</string>
    <string name ="GraphicActivity">Grafik</string>
    <string name ="EntryActivity">Eintragen</string>
    <string name ="CreateActivity">Challenge erstellen</string>
    <string name ="ChooseActivity">Challenge auswählen</string>
    <string name="create_title">Erstelle deine eigene Challenge</string>
    <string name="create_challenge">Challenge</string>
    <string name="create_frequency">Wie oft soll die Challenge erfüllt werden?</string>
    <string name="create_daily">täglich</string>
    <string name="create_weekly">wöchentlich</string>
    <string name="create_rating">Bewertungssystem</string>
    <string name="create_yesno">ja | nein</string>
    <string name="create_1to3">gar nicht | ein wenig | komplett</string>
    <string name="create_1to5">Skala von 1 - 5</string>
    <string name="create_value">Wert</string>
    <string name="create_maximum">Ziel</string>
    <string name="create_unit">Einheit</string>
    <string name="create_meanvalue">Durchschnitt</string>
    <string name="create_greaterthanmax">erreichen und überschreiten</string>
    <string name="create_smallerthanmax">erreichen und unterschreiten</string>

    <string name="entry_title">Heutiger Fortschritt</string>
    <string name="entry_progress">Fortschritt</string>
    <string name="entry_accomplished">Hast du die Challenge erreicht?</string>
    <string name="entry_yes">ja</string>
    <string name="entry_no">nein</string>
    <string name="entry_notatall">gar nicht</string>
    <string name="entry_some">ein wenig</string>
    <string name="entry_totally">komplett</string>
    <string name="entry_update">Aktualisieren</string>




</resources>
