<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntryActivity">


    <TextView
        android:id="@+id/textView_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entry_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Fortschritt"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/textView_progress"
        app:layout_constraintTop_toBottomOf="@+id/textView_accomplished" />

    <TextView
        android:id="@+id/textView_accomplished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/entry_accomplished"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_goal" />


    <RadioGroup
        android:id="@+id/radioGroup_2"
        android:layout_width="104dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_accomplished">

        <RadioButton
            android:id="@+id/radioButton_2yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:onClick="onClick_rate2"
            android:text="@string/entry_yes"
            tools:layout_editor_absoluteX="167dp"
            tools:layout_editor_absoluteY="210dp" />

        <RadioButton
            android:id="@+id/radioButton_2no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onClick_rate2"
            android:text="@string/entry_no"
            tools:layout_editor_absoluteX="210dp"
            tools:layout_editor_absoluteY="210dp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup_3"
        android:layout_width="93dp"
        android:layout_height="96dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_accomplished">

        <RadioButton
            android:id="@+id/radioButton_3no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onClick_rate3"
            android:text="@string/entry_notatall"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="262dp" />

        <RadioButton
            android:id="@+id/radioButton_3some"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick_rate3"
            android:text="@string/entry_some"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="294dp" />

        <RadioButton
            android:id="@+id/radioButton_3yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick_rate3"
            android:text="@string/entry_totally"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="326dp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup_5"
        android:layout_width="274dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_accomplished">


        <RadioButton
            android:id="@+id/radioButton_51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layoutDirection="rtl"
            android:onClick="onClick_rate5"
            android:text="@string/entry_notatall"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="390dp" />

        <RadioButton
            android:id="@+id/radioButton_52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick_rate5"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="390dp" />

        <RadioButton
            android:id="@+id/radioButton_53"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick_rate5"
            tools:layout_editor_absoluteX="174dp"
            tools:layout_editor_absoluteY="390dp" />

        <RadioButton
            android:id="@+id/radioButton_54"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick_rate5"
            tools:layout_editor_absoluteX="206dp"
            tools:layout_editor_absoluteY="390dp" />

        <RadioButton
            android:id="@+id/radioButton_55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick_rate5"
            android:text="@string/entry_totally"
            tools:layout_editor_absoluteX="238dp"
            tools:layout_editor_absoluteY="390dp" />


    </RadioGroup>

    <TextView
        android:id="@+id/textView_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/entry_progress"
        app:layout_constraintBottom_toBottomOf="@+id/editText_progress"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onClick_update"
        android:text="@string/entry_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_3" />

    <TextView
        android:id="@+id/textView_chosenChallenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:singleLine="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_entry" />

    <TextView
        android:id="@+id/textView_unit"
        android:layout_width="79dp"
        android:layout_height="19dp"
        android:text="einheit"
        app:layout_constraintStart_toStartOf="@+id/editText_progress"
        app:layout_constraintTop_toBottomOf="@+id/editText_progress" />

    <TextView
        android:id="@+id/textView_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView_entrydayweek" />

    <TextView
        android:id="@+id/textView_entrydayweek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:inputType="textImeMultiLine"
        android:text="Diese Challenge machst du "
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView_chosenChallenge" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_entry" />

    <View
        android:id="@+id/divider3"
        android:layout_width="10dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_entrydayweek" />

    <View
        android:id="@+id/divider4"
        android:layout_width="10dp"
        android:layout_height="37dp"
        android:layout_marginEnd="4dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/textView_average"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/textView_average" />

    <TextView
        android:id="@+id/textView_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorAccent"
        android:inputType="textMultiLine"
        android:text="TextView"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/button_update" />


</androidx.constraintlayout.widget.ConstraintLayout>